# rosbag_packer

./: CMakeLists.txt  README.md  main.cpp  manifest.xml  package.xml  script.sh
include/: common.h
launch/: rosbag_packer.launch
